force-app/main/default/objects/Calculator__c/Calculator__c.object-meta.xml
<CustomObject>
    <label>Calculator</label>
    <nameField>
        <displayFormat>Calc{0000}</displayFormat>
        <label>Calculator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>