force-app/main/default/objects/Calculator__c/fields/NumberA__c.field-meta.xml
<CustomField>
    <fullName>NumberA__c</fullName>
    <label>Number A</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>