force-app/main/default/objects/Calculator__c/fields/NumberB__c.field-meta.xml
<CustomField>
    <fullName>NumberB__c</fullName>
    <label>Number B</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>