force-app/main/default/objects/Calculator__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>