force-app/main/default/objects/Calculator__c/fields/Quotient__c.field-meta.xml
<CustomField>
    <fullName>Quotient__c</fullName>
    <label>Quotient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>